# Declan

./: .env.example  .gitignore  DECLAN.md  pyproject.toml
config/: costs.yaml  holdings.yaml  news_sources.yaml  universe.yaml  watchlist.yaml
docs/: architecture.md  decisions.md  research_log.md  roadmap.md
src/declan/: cli.py  config.py
src/declan/features/: regime.py  snapshot.py
src/declan/indicators/: calendar.py  flows.py  price.py  registry.py
src/declan/ingest/: base.py  finmind.py  normalize.py  twse_openapi.py
src/declan/jobs/: ingest.py  report.py
src/declan/report/: daily_md.py
src/declan/store/: db.py  parquet_io.py  schema.py
tests/: conftest.py  helpers.py  helpers_synth.py  test_config.py  test_features.py  test_finmind_parse.py  test_indicators.py  test_ingest_job.py  test_normalize.py  test_report.py  test_store.py  test_twse_parse.py
tests/fixtures/: README.md  finmind_flows_2330.json  finmind_price_2330.json  finmind_price_adj_2330.json  flows_fixture.parquet  make_fixtures.py  prices_fixture.parquet  twse_stock_day_2330.json
