[project]
name = "declan"
version = "0.1.0"
description = "Personal finance research assistant for the Taiwan stock market (TWSE)"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "tenacity>=8.3",
]

[project.scripts]
declan = "declan.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/declan"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/declan/cli.py" = ["B008"]  # typer.Option in defaults is idiomatic Typer

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make plain `pytest` work from the repo root without installing the package:
# "src" exposes the declan package (src layout), "." exposes tests.helpers.
pythonpath = ["src", "."]
